added scroll glue

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <!-- Custom CSS -->
     <link href="css/sidebar.css" rel="stylesheet">
     <link href="css/message.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -71,8 +72,8 @@
         <!-- /#sidebar-wrapper -->
 
         <!-- Page Content -->
-        <div id="page-content-wrapper" ng-controller="MessagesController as messagesCtrl" ng-cloak scroll-glue>
-            <div class="container-fluid" style="height:100%;">
+        <div id="page-content-wrapper" ng-controller="MessagesController as messagesCtrl" ng-cloak>
+            <div class="container-fluid scrollable" style="height:100%;" scroll-glue>
                 <div class="row">
                     <div class="col-lg-12">
                         <h1>General</h1>
