--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html lang="en" ng-app="Chat">
+<html lang="en" ng-app="Ping">
 
 <head>
 
@@ -32,6 +32,7 @@
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
     <script type="text/javascript" src="/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/MessagesController.js"></script>
     <script type="text/javascript" src="js/scrollglue.js"></script>
 
 </head>
