--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
     <title>Ping</title>
 
+    <!-- <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css'> -->
+
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 
@@ -45,29 +47,19 @@
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
-                        Ping
+                  <h3>Ping</h3>
                 </li>
+                <li class="sidebar-header">
+                  <h4>Channels</h4>
+                </li>
+                <li class="selected">
+                    <a href="#">General</a>
+                </li>
+
                 <li>
-                    <a href="#">Dashboard</a>
+                    <a href="#">Add New Channel</a>
                 </li>
-                <li>
-                    <a href="#">Shortcuts</a>
-                </li>
-                <li>
-                    <a href="#">Overview</a>
-                </li>
-                <li>
-                    <a href="#">Events</a>
-                </li>
-                <li>
-                    <a href="#">About</a>
-                </li>
-                <li>
-                    <a href="#">Services</a>
-                </li>
-                <li>
-                    <a href="#">Contact</a>
-                </li>
+
             </ul>
         </div>
         <!-- /#sidebar-wrapper -->
