--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <script type="text/javascript" src="/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/MessagesController.js"></script>
+    <script type="text/javascript" src="js/SidebarController.js"></script>
     <script type="text/javascript" src="js/scrollglue.js"></script>
 
 </head>
@@ -44,23 +45,49 @@
     <div id="wrapper">
 
         <!-- Sidebar -->
-        <div id="sidebar-wrapper">
+        <div id="sidebar-wrapper" ng-controller="SidebarController as sideBarCtrl" ng-cloak>
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
                   <h3>Ping</h3>
                 </li>
+
                 <li class="sidebar-header">
                   <h4>Channels</h4>
                 </li>
-                <li class="selected">
-                    <a href="#">General</a>
-                </li>
+
+                <div ng-repeat="channel in sideBarCtrl.channels">
+                  <li ng-class="{'selected': channel.current}">
+                      <a href="#" ng-click="sideBarCtrl.changeChannel(channel.name)">{{channel.name}}</a>
+                  </li>
+                </div>
 
                 <li>
-                    <a href="#">Add New Channel</a>
+                    <a href="#" data-toggle="modal" data-target="#myModal">Add New Channel</a>
                 </li>
 
             </ul>
+
+            <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" data-backdrop="false">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">Add a new channel</h4>
+                  </div>
+                  <div class="modal-body">
+                    <form name="messageForm" ng-submit="sideBarCtrl.addChannel()">
+                      <div class="form-group">
+                        <label for="channelName">Channel Name</label>
+                        <input ng-model="sideBarCtrl.channel.name" type="text" class="form-control" id="channelName" placeholder="Enter new channel name">
+                      </div>
+                      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                      <button type="submit" class="btn btn-default btn-primary">Add Channel</button>
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </div>
+
         </div>
         <!-- /#sidebar-wrapper -->
 
@@ -69,7 +96,7 @@
             <div class="container-fluid scrollable" style="height:100%;" scroll-glue>
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1>General</h1>
+                        <h1>{{messagesCtrl.currentChannel}}</h1>
                         <hr>
                         <!-- <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a> -->
 
@@ -95,6 +122,8 @@
             </div>
         </div>
         <!-- /#page-content-wrapper -->
+
+
 
     </div>
     <!-- /#wrapper -->
