tidying up css and closing modal

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </div>
 
                 <li>
-                    <a href="#" data-toggle="modal" data-target="#myModal">Add New Channel</a>
+                    <a href="#" data-toggle="modal" data-target="#myModal" class="menu-link">Add New Channel</a>
                 </li>
 
             </ul>
