Add login and sign up error handling

--- a/login_error.html
+++ b/login_error.html
@@ -38,6 +38,8 @@
 
   <div class="container">
 
+    <div class="alert alert-danger centered" role="alert">Login Error!</div>
+
     <form class="form-signin" method="post" action="/login">
       <h2 class="form-signin-heading">Please sign in</h2>
       <label for="username" class="sr-only">Email address</label>
