--- a/signup.html
+++ b/signup.html
@@ -36,7 +36,7 @@
 
 <body>
 
-  <div class="container">
+  <div class="container" ng-controller="UserController as userCtrl">
 
     <form class="form-signin" method="post" action="/signup">
       <h2 class="form-signin-heading">Please sign up</h2>
@@ -46,6 +46,10 @@
       <input type="password" name="password" class="form-control" placeholder="Password" required>
       <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
     </form>
+
+    <div class="centered">
+      <a href="/login">Already registered?</a>
+    </div>
 
   </div> <!-- /container -->
 
