--- a/login.html
+++ b/login.html
@@ -48,7 +48,7 @@
     </form>
 
     <div class="centered">
-      <a href="/signup">Need and account?</a>
+      <a href="/signup">Need an account?</a>
     </div>
 
   </div> <!-- /container -->
