Display online users

--- a/index.html
+++ b/index.html
@@ -66,6 +66,16 @@
                     <a href="#" data-toggle="modal" data-target="#myModal" class="menu-link">Add New Channel</a>
                 </li>
 
+                <li class="sidebar-header">
+                  <h4>Users</h4>
+                </li>
+
+                <div ng-repeat="user in sideBarCtrl.onlineUsers">
+                  <li>
+                      <p>{{user.username}}</p>
+                  </li>
+                </div>
+
             </ul>
 
             <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" data-backdrop="false">
