--- a/login_error.html
+++ b/login_error.html
@@ -50,7 +50,7 @@
     </form>
 
     <div class="centered">
-      <a href="/signup">Need and account?</a>
+      <a href="/signup">Need an account?</a>
     </div>
 
   </div> <!-- /container -->
