--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
     <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-cookies.min.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-sanitize.min.js"></script>
     <script type="text/javascript" src="/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/filters.js"></script>
     <script type="text/javascript" src="js/MessagesController.js"></script>
     <script type="text/javascript" src="js/SidebarController.js"></script>
     <script type="text/javascript" src="js/scrollglue.js"></script>
@@ -114,7 +116,7 @@
                         <div ng-repeat="message in messagesCtrl.messages">
                           <div class="message-container">
                             <div class="message-author">{{message.author}} <span class="time">{{message.created | date : 'HH:mm'}}</span></div>
-                            <div class="message-content">{{message.content}}</div>
+                            <div class="message-content" ng-bind-html="message.content | urlify"></div>
                           </div>
                         </div>
 
