Create assets dir

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <script type="text/javascript" src="js/filters.js"></script>
     <script type="text/javascript" src="js/MessagesController.js"></script>
     <script type="text/javascript" src="js/SidebarController.js"></script>
-    <script type="text/javascript" src="js/scrollglue.js"></script>
+    <script type="text/javascript" src="libs/scrollglue.js"></script>
 
 </head>
 
