--- a/signup.html
+++ b/signup.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html lang="en" ng-app="Ping">
+<html lang="en">
 
 <head>
 
@@ -28,15 +28,12 @@
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
-    <script type="text/javascript" src="js/app.js"></script>
-    <script type="text/javascript" src="js/MessagesController.js"></script>
 
 </head>
 
 <body>
 
-  <div class="container" ng-controller="UserController as userCtrl">
+  <div class="container">
 
     <form class="form-signin" method="post" action="/signup">
       <h2 class="form-signin-heading">Please sign up</h2>
