--- a/login_error.html
+++ b/login_error.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html lang="en" ng-app="Ping">
+<html lang="en">
 
 <head>
 
@@ -28,9 +28,6 @@
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
-    <script type="text/javascript" src="js/app.js"></script>
-    <script type="text/javascript" src="js/MessagesController.js"></script>
 
 </head>
 
@@ -57,7 +54,7 @@
 
 
   <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-  <script src="lib/ie10-viewport-bug-workaround.js"></script>
+  <script src="libs/ie10-viewport-bug-workaround.js"></script>
 
 </body>
 
